<resources>
    <string name="app_name">Media Remote</string>
    <string name="power">Power</string>
    <string name="output">Output</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="settings">Settings</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="forward">Forward</string>
    <string name="volume_down">Volume Down</string>
    <string name="volume_up">Volume Up</string>
    <string name="audio">Audio</string>
    <string name="audio_off">Audio Off</string>
    <string name="subtitles">Subtitles</string>
    <string name="subs_off">Subs Off</string>
    <string name="open_settings_and_choose_a_server">Open Settings and choose a Server</string>
    <string name="searching_server">Searching Server %s</string>
    <string name="server_found">Server %s found at %s</string>
    <string name="server_not_found">Server %s not found</string>
    <string name="settings_saved">Settings saved</string>
    <string name="server">Server</string>
    <string name="save">Save</string>
    <string name="use_button_vibration">Use button vibration</string>
    <string name="vibration_intensity">Vibration intensity</string>
</resources>