<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/txt_server_name"
        android:text="@string/server" />

    <EditText
        android:id="@+id/txt_server_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:inputType="textCapCharacters|textNoSuggestions" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_padding" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swt_vibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_button_vibration" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/skbVibrationIntensity"
        android:text="@string/vibration_intensity" />

    <SeekBar
        android:id="@+id/skbVibrationIntensity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_padding" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_padding" />

    <TextView
        android:id="@+id/txt_build"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name" />

</LinearLayout>